--- a/public/style.css
+++ b/public/style.css
@@ -1,41 +1,46 @@
 body {
+    background-color: LightSteelBlue;
+    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
     justify-content: center;
-    height: 100vh;
-    background-color: #f7f7f7;
-    font-family: 'Arial', sans-serif;
+    margin-top: 20px;
 }
 
-h1 {
-    margin-bottom: 20px;
+#Jeu {
+    display: inline-block;
+    background-color: SteelBlue;
+    padding: 10px;
 }
 
-#board {
-    display: grid;
-    grid-template-columns: repeat(3, 100px);
-    grid-template-rows: repeat(3, 100px);
-    gap: 10px;
+#Jeu div {
+    overflow: hidden;
 }
 
-.cell {
+#Jeu button {
     width: 100px;
     height: 100px;
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 40px;
-    cursor: pointer;
+    font-weight: bold;
+    font-size: 50px;
+    margin: 5px;
+    float: left;
 }
 
-.winning-message {
-    display: none;
-    flex-direction: column;
-    align-items: center;
+aside {
+    margin-left: 20px;
 }
 
-.show {
-    display: flex;
+#StatutJeu {
+    color: black;
+    background: #eee;
+    padding: 10px;
+    text-align: center;
+    font-size: 20px;
 }
